--- a/sass/komponente/_dugme.scss
+++ b/sass/komponente/_dugme.scss
@@ -4,28 +4,26 @@
     &:visited {
         text-transform: uppercase;
         text-decoration: none;
-        padding: 1.5rem 4rem;
+        padding: 1.2rem 3rem;
         display: inline-block;
-        border-radius: 10rem;
+        background-color: $specijal;
+        color: $osnovna;
         transition: all .2s;
         position: relative;
         font-size: $normalan-font;
+        @include box-shadow-1;
 
         border: none;
         cursor: pointer;
     }
     &:hover {
         transform: translateY(-.3rem);
-        box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
-        &::after {
-            transform: scaleX(1.4) scaleY(1.6);
-            opacity: 0;
-        }
+        @include box-shadow-2;
     }
     &:active,
     &:focus {
         outline: none;
-        transform: translateY(-.1rem);
+        transform: translateY(.1rem);
         box-shadow: 0 .5rem 1rem rgba($crna, 0.2);
     }
     &--belo {
