--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,6 +25,9 @@
 @import "organizacija/footer";
 @import "organizacija/contact-form";
 
+@import "organizacija/about-hero";
+@import "organizacija/team";
+
 @import "organizacija/grid";
 
 @import "organizacija/nav";
