--- a/sass/baza/_pomagaci.scss
+++ b/sass/baza/_pomagaci.scss
@@ -30,10 +30,10 @@
 
 // Display
 .d-none {
-    display: none;
+    display: none!important;
 }
 .d-block {
-    display: block;
+    display: block!important;
 }
 
 
