--- a/sass/baza/_animacije.scss
+++ b/sass/baza/_animacije.scss
@@ -35,3 +35,11 @@
         transform: translate(0);
     }
 }
+@keyframes dissapear {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }
+}
