--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,6 +13,7 @@
 
 // Komponente
 @import "komponente/dugme";
+@import "komponente/top";
 
 
 // Organizacija
@@ -27,6 +28,9 @@
 
 @import "organizacija/about-hero";
 @import "organizacija/team";
+@import "organizacija/author";
+@import "organizacija/faq";
+
 
 @import "organizacija/grid";
 
