--- a/sass/organizacija/_grid.scss
+++ b/sass/organizacija/_grid.scss
@@ -17,6 +17,6 @@
         grid-template-rows: 50vh min-content repeat(4,min-content);
     }
     &__author {
-
+        grid-template-rows: 50vh min-content repeat(4,min-content);
     }
 }
