--- a/sass/komponente/_top.scss
+++ b/sass/komponente/_top.scss
@@ -8,6 +8,7 @@
     width: 5rem;
     height: 5rem;
     background-color: $osnovna;
+    z-index: 10;
     cursor: pointer;
     @include box-shadow-1;
     display: grid;
