--- a/sass/organizacija/_services.scss
+++ b/sass/organizacija/_services.scss
@@ -26,7 +26,7 @@
         }
     }
     &__icon {
-        color: $crna;
+        color: $specijal;
     }
     &__card-heading {
         font-size: 1.5rem;
